less/bootstrap-theme/wrapper.less
//
// Wrapper
// --------------------------------------------------

html,
body,
.container-main {
    height: 100%;
    width: 100%;
    margin: 0;
}

.container-main {
    overflow-y: auto;

    &.container-fixed-top {
        padding-top: @navbar-height + @navbar-margin-bottom;
    }

    &.container-fixed-bottom {
        padding-bottom: @navbar-height + @navbar-margin-bottom;
    }
}

